fixed margins and padding and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -26,23 +26,34 @@ body {
 
 article {
   max-width: 43em;
+  margin-top: 0;
+  margin-bottom: 1.3rem;
 }
 
 article h1 {
   font-weight: normal;
+  margin-top: 0;
+  margin-bottom: 1.3rem;
 }
 
 article header {
   border-bottom: 1px solid #999;
+  padding-top: 1rem;
+  padding-bottom: .5rem;
+  margin-bottom: 1.3rem;
+
 }
 
 article p {
-  margin-top: 1rem;
+  margin-top: 0;
   margin-right: .5rem;
+  margin-bottom: 1.3rem;
 }
 
 article ol {
+  margin-top: 0;
   margin-left: -1.5rem;
+  margin-bottom: 1.3rem;
 }
 
 article header p {
@@ -51,12 +62,17 @@ article header p {
 
 article > p:last-child {
   border-bottom: 1px solid #999;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 blockquote {
   max-width: 24em;
   color: #555;
   font-size: 1.125rem;
+  margin-top: 0;
+  margin-bottom: 1.3rem;
 }
 
 .quote {
@@ -64,6 +80,7 @@ blockquote {
 }
 
 @media only screen and (min-width: 20em) {
+
   header {
     line-height: .25;
     padding-bottom: 1rem;
@@ -84,18 +101,19 @@ blockquote {
 }
 
 @media only screen and (min-width: 38em) {
+
   html {
     font-size: 110%;
     line-height: 1.4;
   }
 
   article {
-    padding: 2rem;
+    padding: 1rem;
   }
 
   header {
     padding-bottom: .5rem;
-    padding-top: .25rem;
+    padding-top: 0;
 
   }
 
@@ -107,6 +125,8 @@ blockquote {
   article > p:last-child {
     padding-top: 1rem;
     padding-bottom: 1rem;
+    margin-bottom: 0;
+    margin-top: 0;
   }
 }
 
@@ -127,7 +147,7 @@ blockquote {
     padding-right: 2rem;
   }
 
-  article >p:last-child {
+  article > p:last-child {
     padding-bottom: 1rem;
     padding-top: .5rem;
   }
@@ -135,6 +155,7 @@ blockquote {
 }
 
 @media only screen and (min-width: 90em) {
+
   html {
     line-height: 2;
     font-size: 130%;
